# substrate-bench

./: .gitignore  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  leaderboard-frontier.md  leaderboard.md  measurement-contract-v0.1.md  pyproject.toml  substrate-bench-spec.md
baselines/: README.md
experiments/: 2026-06-27-v0-baseline-stub.md  2026-06-28-frontier-pivot.md  2026-06-28-v0.1-baseline-stub.md  2026-06-29-DRAFT-post-substrate-selection.md  2026-06-29-frontier-first-real-run.md  2026-06-29-recon-tool-overtriggering-brief.md  gate-calibration.md
results/: smoke-stub.json  v0-stub.json
src/substrate_bench/: __init__.py  __main__.py  audit.py  cli.py  frontier.py  leaderboard.py  model.py  registry.py  runner.py  schema.py  scoring.py  substrates.py
src/substrate_bench/adapters/: SUBSTRATE_RUBRIC.md  __init__.py  base.py
src/substrate_bench/adapters/arc_agi_2/: __init__.py  adapter.py  labels.json  manifest.json
src/substrate_bench/adapters/gpqa_diamond/: __init__.py  adapter.py  labels.json  (+1 more)
src/substrate_bench/checkers/: __init__.py
src/substrate_bench/conditions/: __init__.py
src/substrate_bench/references/: __init__.py  arithmetic.py  dynamics.py  gold.py  rules.py  search_ref.py  verify_ref.py
tasks/smoke/: exact-103.json  lang-101.json  lang-102.json  lang-103.json  lang-104.json  lang-106.json  meta-001.json  search-101.json  search-103.json  sim-001.json  sim-102.json  sim-106.json  social-104.json  social-107.json  verify-102.json  verify-103.json  verify-105.json  verify-106.json  verify-107.json
tasks/v0/: exact-001.json  exact-002.json  exact-101.json  exact-102.json  exact-104.json  exact-105.json  lang-001.json  lang-105.json  meta-001.json  rule-001.json  search-001.json  search-002.json  search-102.json  search-104.json  search-105.json  sim-002.json  sim-101.json  sim-103.json  sim-104.json  sim-105.json  social-001.json  social-101.json  social-102.json  social-103.json  social-105.json  social-106.json  verify-101.json  verify-104.json
tests/: conftest.py  test_adapters.py  test_audit.py  test_checkers.py  test_conditions.py  test_end_to_end.py  test_integrity.py  test_model.py  test_references.py  test_registry.py  test_schema.py  test_scoring.py
tools/: author_tasks.py
